--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h2>About Me</h2>
 
     <div class="profile-photo">
-      <img src="lito.jpg" alt="Photo of Lito R. Poloyapoy">
+      <img src="Lito.jpg" alt="Photo of Lito R. Poloyapoy">
     </div>
 
 
@@ -60,3 +60,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
