--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       I’m passionate about Computer and Technology.
     </p>
     <p>
-      <strong>Career Goal:</strong> IT Network Engineer / Computer Technician
+      <strong>Career Goal:</strong> IT Network Engineer / CyberSecuity / Web Developer
     </p>
   </section>
   
@@ -60,4 +60,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
