--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       I’m passionate about Computer and Technology.
     </p>
     <p>
-      <strong>Career Goal:</strong> IT Network Engineer / CyberSecuity / Web Developer
+      <strong>Career Goal:</strong> IT Network Engineer / CyberSecuity / Web Developer & Designer
     </p>
   </section>
   
@@ -60,5 +60,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
