--- a/certificates.html
+++ b/certificates.html
@@ -65,7 +65,7 @@
     <div class="card">
       <img src="NABT.jpg" alt="Cisco Networking Academy Logo" class="certificate-logo" onclick="openImage(this)">
       <div class="certificate-info">
-        <h3>Networking Addressing and Basic Troubleshooting</h3>
+        <h3>Network Addressing and Basic Troubleshooting</h3>
         <p>Issued by Cisco Networking Academy | 2025</p>
       </div>
     </div>
@@ -128,3 +128,4 @@
   </footer>
 </body>
 </html>
+
