--- a/education.html
+++ b/education.html
@@ -49,8 +49,7 @@
       <div class="school-info">
         <h3>Senior High School</h3>
         <p><strong>San Isidro National High School SHS - Antipolo City</strong> (2023 – 2024)</p>
-        <p>Academic Track: Technological Vocational and Livelihood</p>
-        <p>Information and Communication Technology - Computer Systems Servicing Strand</p>
+        <p>Academic Track: TVL - ICT - CSS</p>
       </div>
     </div>
   
@@ -81,4 +80,5 @@
   </footer>
 </body>
 </html>
+
 
