--- a/certificates.html
+++ b/certificates.html
@@ -45,7 +45,15 @@
         <p>Issued by Simplilearn | 2025</p>
       </div>
     </div>
-  
+    
+    <div class="card">
+      <img src="Intro_to_CS.jpg" alt="Simplilearn Logo" class="certificate-logo" onclick="openImage(this)">
+      <div class="certificate-info">
+        <h3>Introduction to Cyber Security</h3>
+        <p>Issued by Simplilearn | 2025</p>
+      </div>
+    </div>
+    
     <div class="card">
       <img src="STYLECSS.jpg" alt="Simplilearn Logo" class="certificate-logo" onclick="openImage(this)">
       <div class="certificate-info">
@@ -128,4 +136,5 @@
   </footer>
 </body>
 </html>
+
 
