--- a/certificates.html
+++ b/certificates.html
@@ -12,9 +12,6 @@
   <nav class="navbar">
     <h1 class="logo">Poloyapoy's E-Portfolio</h1>
 
-  
-    <button class="menu-toggle" id="menu-toggle">☰</button>
-
     <ul class="nav-links" id="nav-links">
       <li><a href="index.html" class="active">Home</a></li>
       <li><a href="education.html">Education</a></li>
@@ -37,7 +34,8 @@
         <p>Issued by TESDA | 2024</p>
       </div>
     </div>
-        <div class="card">
+
+    <div class="card">
       <img src="Intro_to_CS.jpg" alt="Simplilearn Logo" class="certificate-logo" onclick="openImage(this)">
       <div class="certificate-info">
         <h3>Introduction to Cyber Security</h3>
@@ -52,7 +50,7 @@
         <p>Issued by Simplilearn | 2025</p>
       </div>
     </div>
-    
+  
     <div class="card">
       <img src="STYLECSS.jpg" alt="Simplilearn Logo" class="certificate-logo" onclick="openImage(this)">
       <div class="certificate-info">
@@ -72,7 +70,7 @@
     <div class="card">
       <img src="NABT.jpg" alt="Cisco Networking Academy Logo" class="certificate-logo" onclick="openImage(this)">
       <div class="certificate-info">
-        <h3>Network Addressing and Basic Troubleshooting</h3>
+        <h3>Networking Addressing and Basic Troubleshooting</h3>
         <p>Issued by Cisco Networking Academy | 2025</p>
       </div>
     </div>
@@ -100,8 +98,18 @@
         <p>Issued by Cisco Networking Academy | 2025</p>
       </div>
     </div>
+
+    <div class="card">
+      <img src="NetworkingBasics.jpg" alt="Cisco Networking Academy Logo" class="certificate-logo" onclick="openImage(this)">
+      <div class="certificate-info">
+        <h3>Networking Basics</h3>
+        <p>Issued by Cisco Networking Academy | 2025</p>
+      </div>
+    </div>
+    
   </section>
-  
+
+
   <div id="imageModal" class="modal" onclick="closeImage()">
     <span class="close">&times;</span>
     <img class="modal-content" id="modalImage">
@@ -135,6 +143,3 @@
   </footer>
 </body>
 </html>
-
-
-
