--- a/projects.html
+++ b/projects.html
@@ -26,10 +26,18 @@
 <main class="content">
   <h2>Projects / Works</h2>
   <div class="project-grid">
+
+    <div class="project-card">
+      <h3>Group countdown Timer</h3>
+      <p>A website-based countdown timer.</p>
+      <a href="https://litspoloyaps.github.io/Countdown-Timer" target="_blank">View Project</a>
+    </div>
+
     <div class="project-card">
       <h3>Group Digital Clock</h3>
       <p>A web-based digital clock.</p>
       <a href="https://litspoloyaps.github.io/Digital-Clock" target="_blank">View Project</a>
+      
     </div>
     <div class="project-card">
       <h3>Group Calculator</h3>
@@ -74,4 +82,3 @@
 </script>
 </body>
 </html>
-
