--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
   <div class="project-grid">
 
     <div class="project-card">
-      <h3>Group countdown Timer</h3>
+      <h3>Group Countdown Timer</h3>
       <p>A website-based countdown timer.</p>
       <a href="https://litspoloyaps.github.io/Countdown-Timer" target="_blank">View Project</a>
     </div>
@@ -82,3 +82,4 @@
 </script>
 </body>
 </html>
+
