--- a/certificates.html
+++ b/certificates.html
@@ -114,6 +114,14 @@
         <p>Issued by Cisco Networking Academy | 2025</p>
       </div>
     </div>
+
+    <div class="card">
+      <img src="IPTE.jpg" alt="Cisco Networking Academy Logo" class="certificate-logo" onclick="openImage(this)">
+      <div class="certificate-info">
+        <h3>Introduction to Packet Tracer Exam</h3>
+        <p>Issued by Cisco Networking Academy | 2025</p>
+      </div>
+    </div>
     
   </section>
 
