--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lito R. Poloyapoy | E-Portfolio</title>
+  
+  <!-- External CSS -->
   <link rel="stylesheet" href="style.css" />
   
+  <!-- Optional Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
+
 <body>
 
+  <!-- HEADER -->
   <header>
     <nav class="navbar">
       <h1 class="logo">Poloyapoy's E-Portfolio</h1>
-  
+
+      <!-- Navigation Links -->
       <ul class="nav-links" id="nav-links">
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="education.html">Education</a></li>
@@ -24,42 +31,40 @@
       </ul>
     </nav>
   </header>
-  
 
+  <!-- HERO SECTION -->
   <section class="hero">
     <div class="hero-content">
       <h2>Hello, I'm <span>Lito R. Poloyapoy</span></h2>
       <p>Aspiring Web Developer & Designer</p>
-      <button id="theme-toggle">🌙 Dark Mode</button>
+      <button id="theme-toggle" aria-label="Toggle dark mode">🌙 Dark Mode</button>
     </div>
   </section>
-  
+
+  <!-- ABOUT SECTION -->
   <section class="about">
     <h2>About Me</h2>
 
     <div class="profile-photo">
-      <img src="Lito.jpg" alt="Photo of Lito R. Poloyapoy">
+      <img src="lito.jpg" alt="Photo of Lito R. Poloyapoy" loading="lazy">
     </div>
 
-
     <p>
-      Hello! I’m Lito R. Poloyapoy, a college student from Colegio de Montalban taking up Bachelor of Science in Information Technology.
-      I’m passionate about Computer and Technology.
+      Hello! I’m <strong>Lito R. Poloyapoy</strong>, a college student from 
+      <em>Colegio de Montalban</em> taking up Bachelor of Science in Information Technology.
+      I’m passionate about computers and technology.
     </p>
     <p>
-      <strong>Career Goal:</strong> IT Network Engineer / CyberSecurity / Web Developer & Designer
+      <strong>Career Goal:</strong> IT Network Engineer / Cybersecurity Specialist / Web Designer
     </p>
   </section>
-  
+
+  <!-- FOOTER -->
   <footer>
     <p>© 2025 Lito R. Poloyapoy. All Rights Reserved.</p>
   </footer>
 
+  <!-- JavaScript -->
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
