--- a/education.html
+++ b/education.html
@@ -3,18 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Educational Background</title>
+  <title>Educational Background | Lito R. Poloyapoy</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
+
 <body>
 
+  <!-- HEADER -->
   <header>
     <nav class="navbar">
       <h1 class="logo">Poloyapoy's E-Portfolio</h1>
   
       <ul class="nav-links" id="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="education.html">Education</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="education.html" class="active">Education</a></li>
         <li><a href="certificates.html">Certificates</a></li>
         <li><a href="skills.html">Skills</a></li>
         <li><a href="projects.html">Projects</a></li>
@@ -24,59 +27,61 @@
     </nav>
   </header>
   
-
+  <!-- MAIN CONTENT -->
   <section class="content">
     <h2>Educational Background</h2>
-  
+
+    <!-- COLLEGE -->
     <div class="card">
-      <a href="https://www.facebook.com/official.colegiodemontalban" target="_blank">
+      <a href="https://www.facebook.com/official.colegiodemontalban" target="_blank" rel="noopener noreferrer">
         <img src="cdm.jpg" alt="Colegio De Montalban Logo" class="school-logo">
       </a>
       <div class="school-info">
         <h3>College / University</h3>
-        <p><strong>Colegio De Montalban - Rodriguez, Rizal</strong> (2024 – Present)</p>
-         <p>Program: Bachelor of Science in Information Technology</p>
+        <p><strong>Colegio De Montalban</strong> – Rodriguez, Rizal (2024 – Present)</p>
+        <p>Program: Bachelor of Science in Information Technology</p>
       </div>
     </div>
-  
+
+    <!-- SENIOR HIGH -->
     <div class="card">
-      <a href="https://www.facebook.com/DepEdTayoSanSINHSSH301426" target="_blank">
-        <img src="sinhs.jpg" alt="San Isidro SHS Logo" class="school-logo">
+      <a href="https://www.facebook.com/DepEdTayoSanSINHSSH301426" target="_blank" rel="noopener noreferrer">
+        <img src="sinhs.jpg" alt="San Isidro Senior High School Logo" class="school-logo">
       </a>
       <div class="school-info">
         <h3>Senior High School</h3>
-        <p><strong>San Isidro National High School SHS - Antipolo City</strong> (2023 – 2024)</p>
-        <p>Academic Track: TVL - ICT - CSS</p>
+        <p><strong>San Isidro National High School SHS</strong> – Antipolo City (2023 – 2024)</p>
+        <p>Academic Track: ICT – Computer Systems Servicing Strand</p>
       </div>
     </div>
-  
+
+    <!-- JUNIOR HIGH -->
     <div class="card">
-      <a href="https://www.facebook.com/DepEdTayoSINHS301426" target="_blank">
-        <img src="sinhs.jpg" alt="San Isidro NHS Logo" class="school-logo">
+      <a href="https://www.facebook.com/DepEdTayoSINHS301426" target="_blank" rel="noopener noreferrer">
+        <img src="sinhs.jpg" alt="San Isidro National High School Logo" class="school-logo">
       </a>
       <div class="school-info">
         <h3>High School</h3>
-        <p><strong>San Isidro National High School - Antipolo City</strong> (2021 – 2022)</p>
+        <p><strong>San Isidro National High School</strong> – Antipolo City (2021 – 2022)</p>
       </div>
     </div>
-    
+
+    <!-- ELEMENTARY -->
     <div class="card">
-      <a href="https://www.facebook.com/KasVilleEsMain" target="_blank">
+      <a href="https://www.facebook.com/KasVilleEsMain" target="_blank" rel="noopener noreferrer">
         <img src="kves.jpg" alt="Kasiglahan Village Elementary School Logo" class="school-logo">
       </a>
       <div class="school-info">
         <h3>Elementary School</h3>
-        <p><strong>Kasiglahan Village Elementary School - Rodriguez, Rizal</strong> (2017 – 2018)</p>
+        <p><strong>Kasiglahan Village Elementary School</strong> – Rodriguez, Rizal (2017 – 2018)</p>
       </div>
-    </div>  
+    </div>
   </section>
       
-
+  <!-- FOOTER -->
   <footer>
-    <p>© 2025 Lito Poloyapoy. All rights reserved.</p>
+    <p>© 2025 Lito R. Poloyapoy. All Rights Reserved.</p>
   </footer>
+
 </body>
 </html>
-
-
-
