--- a/skills.html
+++ b/skills.html
@@ -3,57 +3,67 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Skills</title>
+  <title>Skills | Lito R. Poloyapoy</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<header>
-  <nav class="navbar">
-    <h1 class="logo">Poloyapoy's E-Portfolio</h1>
+  <!-- HEADER -->
+  <header>
+    <nav class="navbar">
+      <h1 class="logo">Poloyapoy's E-Portfolio</h1>
+      <ul class="nav-links" id="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="education.html">Education</a></li>
+        <li><a href="certificates.html">Certificates</a></li>
+        <li><a href="skills.html" class="active">Skills</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="reflection.html">Reflection</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <ul class="nav-links" id="nav-links">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="education.html">Education</a></li>
-      <li><a href="certificates.html">Certificates</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="reflection.html">Reflection</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</header>
-
+  <!-- MAIN CONTENT -->
   <main>
-    <section class="skills">
+    <section class="skills-section">
       <h2>Technical Skills</h2>
-        <span>HTML, CSS, JavaScript</span>
-       <span>Responsive Web Design</span>
+      <div class="skills-grid">
+        <span>HTML</span>
+        <span>CSS</span>
+        <span>JavaScript</span>
+        <span>Responsive Web Design</span>
         <span>GitHub</span>
-          <span>Install and Configure Computer Systems</span>
-         <span>Setup Computer Networks</span>
-       <span>Setup Computer Servers</span>
+        <span>Install & Configure Computer Systems</span>
+        <span>Setup Computer Networks</span>
+        <span>Setup Computer Servers</span>
+      </div>
     </section>
-  </main>
-    <main>
-    <section class="skills">
+
+    <section class="skills-section">
       <h2>Soft Skills</h2>
-       <span>Teamwork</span>
+      <div class="skills-grid">
+        <span>Teamwork</span>
         <span>Time Management</span>
-       <span>Leadership</span>
+        <span>Leadership</span>
+        <span>Adaptability</span>
+        <span>Problem Solving</span>
+      </div>
     </section>
-  </main>
-    <main>
-      <section class="skills">
-        <h2>Language</h2>
+
+    <section class="skills-section">
+      <h2>Languages</h2>
+      <div class="skills-grid">
         <span>Filipino</span>
         <span>English</span>
-      </section>
-    </main>
+      </div>
+    </section>
+  </main>
 
+  <!-- FOOTER -->
   <footer>
-    <p>© 2025 Lito Poloyapoy. All rights reserved.</p>
+    <p>© 2025 Lito R. Poloyapoy. All Rights Reserved.</p>
   </footer>
+
 </body>
 </html>
-
