--- a/reflection.html
+++ b/reflection.html
@@ -3,38 +3,43 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Reflection</title>
+  <title>Reflection | Lito R. Poloyapoy</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<header>
-  <nav class="navbar">
-    <h1 class="logo">Poloyapoy's E-Portfolio</h1>
+  <!-- HEADER -->
+  <header>
+    <nav class="navbar">
+      <h1 class="logo">Poloyapoy's E-Portfolio</h1>
+      <ul class="nav-links" id="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="education.html">Education</a></li>
+        <li><a href="certificates.html">Certificates</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="reflection.html" class="active">Reflection</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <ul class="nav-links" id="nav-links">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="education.html">Education</a></li>
-      <li><a href="certificates.html">Certificates</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="reflection.html">Reflection</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</header>
-
-  <section class="content">
+  <!-- REFLECTION SECTION -->
+  <section class="content reflection">
     <h2>Reflection</h2>
     <p>
-      Throughout my journey, I have developed not only technical skills but also a deeper understanding of collaboration, problem-solving, and continuous learning.
-      Building this portfolio taught me the importance of creativity and persistence in web development.
+      Throughout my journey as an Information Technology student, I’ve developed not only technical expertise but also valuable soft skills such as collaboration, problem-solving, and adaptability. 
+      Creating this e-portfolio has deepened my understanding of design, structure, and the importance of continuous learning in the tech industry.
+    </p>
+    <p>
+      This experience taught me that success in technology isn’t just about mastering tools—it’s about creativity, curiosity, and perseverance. I am excited to continue growing as a professional who can contribute to building meaningful, user-friendly digital experiences.
     </p>
   </section>
 
+  <!-- FOOTER -->
   <footer>
-    <p>© 2025 Lito Poloyapoy. All rights reserved.</p>
+    <p>© 2025 Lito R. Poloyapoy. All Rights Reserved.</p>
   </footer>
+
 </body>
 </html>
-
