--- a/contact.html
+++ b/contact.html
@@ -3,64 +3,64 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact / References</title>
+  <title>Contact / References | Lito R. Poloyapoy</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
+  <!-- HEADER -->
   <header>
     <nav class="navbar">
       <h1 class="logo">Poloyapoy's E-Portfolio</h1>
-  
       <ul class="nav-links" id="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="education.html">Education</a></li>
         <li><a href="certificates.html">Certificates</a></li>
         <li><a href="skills.html">Skills</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="reflection.html">Reflection</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-  <section class="content">
+  <!-- CONTACT SECTION -->
+  <section class="content contact">
     <h2>Contact</h2>
-    <main>
-      <p class="contact-item">
-        Email: 
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=lito.poloyapoy@gmail.com" target="_blank">
-          lito.poloyapoy@gmail.com
-        </a>
-      </p>
 
-      <p class="contact-item facebook">
-        Facebook: 
+    <div class="contact-container">
+      <div class="contact-item">
+        <strong>Email:</strong>
+        <a href="mailto:lito.poloyapoy@gmail.com">lito.poloyapoy@gmail.com</a>
+      </div>
+
+      <div class="contact-item">
+        <strong>Facebook:</strong>
         <a href="https://facebook.com/lits.poloyaps" target="_blank">
           facebook.com/LitoPoloyapoy
         </a>
-      </p>
+      </div>
 
-      <p class="contact-item github">
-        GitHub: 
+      <div class="contact-item">
+        <strong>GitHub:</strong>
         <a href="https://github.com/litspoloyaps" target="_blank">
           github.com/litspoloyaps
         </a>
-      </p>
-    </main>
+      </div>
+    </div>
 
     <h3>References</h3>
-    <ul>
-      <li><strong></strong> – </li>
-      <li><strong></strong> – </li>
+    <ul class="references">
+      <li><strong> </strong> – IT Instructor, Colegio de Montalban</li>
+      <li><strong> </strong> – </li>
     </ul>
   </section>
 
+  <!-- FOOTER -->
   <footer>
-    <p>© 2025 Lito Poloyapoy. All rights reserved.</p>
+    <p>© 2025 Lito R. Poloyapoy. All Rights Reserved.</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
-
