Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h2>About Me</h2>
 
     <div class="profile-photo">
-      <img src="lito.jpg" alt="Photo of Lito R. Poloyapoy" loading="lazy">
+      <img src="Lito.jpg" alt="Photo of Lito R. Poloyapoy" loading="lazy">
     </div>
 
     <p>
@@ -68,3 +68,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
