--- a/certificates.html
+++ b/certificates.html
@@ -130,6 +130,14 @@
       </div>
     </div>
 
+       <div class="card">
+      <img src="NSS.jpg" alt="Cisco Networking Academy - Packet Tracer Exam" class="certificate-logo" onclick="openImage(this)">
+      <div class="certificate-info">
+        <h3>Network Support and Security</h3>
+        <p>Issued by Cisco Networking Academy | 2025</p>
+      </div>
+    </div>
+
   </section>
 
   <!-- IMAGE MODAL -->
@@ -159,3 +167,4 @@
 
 </body>
 </html>
+
