--- a/certificates.html
+++ b/certificates.html
@@ -75,7 +75,7 @@
 
     <!-- Cisco Networking Academy Certificates -->
     <div class="card">
-      <img src="NABT.jpg" alt="Cisco Networking Academy - Addressing and Troubleshooting" class="certificate-logo" onclick="openImage(this)">
+      <img src="NABT.jpg" alt="Cisco Networking Academy - Addressing and Troubleshooting Certificate" class="certificate-logo" onclick="openImage(this)">
       <div class="certificate-info">
         <h3>Networking: Addressing and Basic Troubleshooting</h3>
         <p>Issued by Cisco Networking Academy | 2025</p>
@@ -83,7 +83,7 @@
     </div>
 
     <div class="card">
-      <img src="MAI.jpg" alt="Cisco Networking Academy - Modern AI Certificate" class="certificate-logo" onclick="openImage(this)">
+      <img src="MAI.jpg" alt="Cisco Networking Academy - Modern AI Certificate Certificate" class="certificate-logo" onclick="openImage(this)">
       <div class="certificate-info">
         <h3>Introduction to Modern AI</h3>
         <p>Issued by Cisco Networking Academy | 2025</p>
@@ -99,7 +99,7 @@
     </div>
 
     <div class="card">
-      <img src="OSB.jpg" alt="Cisco Networking Academy - Operating Systems Basics" class="certificate-logo" onclick="openImage(this)">
+      <img src="OSB.jpg" alt="Cisco Networking Academy - Operating Systems Basics Certificate" class="certificate-logo" onclick="openImage(this)">
       <div class="certificate-info">
         <h3>Operating Systems Basics</h3>
         <p>Issued by Cisco Networking Academy | 2025</p>
@@ -107,7 +107,7 @@
     </div>
 
     <div class="card">
-      <img src="NetworkingBasics.jpg" alt="Cisco Networking Academy - Networking Basics" class="certificate-logo" onclick="openImage(this)">
+      <img src="NetworkingBasics.jpg" alt="Cisco Networking Academy - Networking Basics Certificate" class="certificate-logo" onclick="openImage(this)">
       <div class="certificate-info">
         <h3>Networking Basics</h3>
         <p>Issued by Cisco Networking Academy | 2025</p>
@@ -115,7 +115,7 @@
     </div>
 
     <div class="card">
-      <img src="CHB.jpg" alt="Cisco Networking Academy - Computer Hardware Basics" class="certificate-logo" onclick="openImage(this)">
+      <img src="CHB.jpg" alt="Cisco Networking Academy - Computer Hardware Basics Certificate" class="certificate-logo" onclick="openImage(this)">
       <div class="certificate-info">
         <h3>Computer Hardware Basics</h3>
         <p>Issued by Cisco Networking Academy | 2025</p>
@@ -123,18 +123,27 @@
     </div>
 
     <div class="card">
-      <img src="IPTE.jpg" alt="Cisco Networking Academy - Packet Tracer Exam" class="certificate-logo" onclick="openImage(this)">
+      <img src="IPTE.jpg" alt="Cisco Networking Academy - Packet Tracer Exam Certificate" class="certificate-logo" onclick="openImage(this)">
       <div class="certificate-info">
         <h3>Introduction to Packet Tracer Exam</h3>
         <p>Issued by Cisco Networking Academy | 2025</p>
       </div>
     </div>
 
-       <div class="card">
-      <img src="NSS.jpg" alt="Cisco Networking Academy - Packet Tracer Exam" class="certificate-logo" onclick="openImage(this)">
+    <div class="card">
+      <img src="NSS.jpg" alt="Cisco Networking Academy - Network Support and Security Certificate" class="certificate-logo" onclick="openImage(this)">
       <div class="certificate-info">
         <h3>Network Support and Security</h3>
         <p>Issued by Cisco Networking Academy | 2025</p>
+      </div>
+    </div>
+
+    <!-- HP LIFE Certificates -->
+    <div class="card">
+      <img src="AIB.jpg" alt="HP LIFE - AI for Begineers Certificate" class="certificate-logo" onclick="openImage(this)">
+      <div class="certificate-info">
+        <h3>AI for Beginners</h3>
+        <p>Issued by HP LIFE | 2025</p>
       </div>
     </div>
 
@@ -167,4 +176,3 @@
 
 </body>
 </html>
-
