Add CODE.ORG certificate and update footer
Added CODE.ORG certificate section and updated footer.

--- a/certificates.html
+++ b/certificates.html
@@ -138,6 +138,14 @@
       </div>
     </div>
 
+    <div class="card">
+      <img src="CTM.jpg" alt="Cisco Networking Acadaemy - Cyber Threat Management" class="certificate-logo" onclick="openImage(this)">
+        <div class="certificate-info">
+        <h3>Cyber Threat Management</h3>
+        <p>Issued by Cisco Networking Acadaemy | 2025</p>
+      </div>
+    </div>
+
     <!-- HP LIFE Certificates -->
     <div class="card">
       <img src="AIB.jpg" alt="HP LIFE - AI for Begineers Certificate" class="certificate-logo" onclick="openImage(this)">
@@ -146,6 +154,16 @@
         <p>Issued by HP LIFE | 2025</p>
       </div>
     </div>
+ 
+<!-- CODE.ORG Certificates -->
+<div class="card">
+  <img src="THC.jpg" alt="CODE.ORG - The Hours of Code Certificate" class="certificate-logo" onclick="openImage(this)">
+  <div class="certificate-info">
+    <h3>The Hours of Code</h3>
+    <p>Issued by CODE.ORG | 2025</p>
+  </div>
+</div>
+
 
   </section>
 
