--- a/certificates.html
+++ b/certificates.html
@@ -146,6 +146,14 @@
       </div>
     </div>
 
+    <div class="card">
+      <img src="IOT_DT.jpg" alt="Cisco Networking Acadaemy - Introduction to IoT and Digital Transformation" class="certificate-logo" onclick="openImage(this)">
+        <div class="certificate-info">
+        <h3>Introduction to IoT and Digital Transformation</h3>
+        <p>Issued by Cisco Networking Acadaemy | 2025</p>
+      </div>
+    </div>
+
     <!-- HP LIFE Certificates -->
     <div class="card">
       <img src="AIB.jpg" alt="HP LIFE - AI for Begineers Certificate" class="certificate-logo" onclick="openImage(this)">
@@ -159,7 +167,7 @@
 <div class="card">
   <img src="THC.jpg" alt="CODE.ORG - The Hours of Code Certificate" class="certificate-logo" onclick="openImage(this)">
   <div class="certificate-info">
-    <h3>The Hours of Code</h3>
+    <h3>The Hour of Code</h3>
     <p>Issued by CODE.ORG | 2025</p>
   </div>
 </div>
@@ -194,3 +202,4 @@
 
 </body>
 </html>
+
