--- a/certificates.html
+++ b/certificates.html
@@ -172,6 +172,22 @@
   </div>
 </div>
 
+<div class="card">
+  <img src="THAI.jpg" alt="CODE.ORG - The Hours of A.I Certificate" class="certificate-logo" onclick="openImage(this)">
+  <div class="certificate-info">
+    <h3>The Hour of A.I</h3>
+    <p>Issued by CODE.ORG | 2025</p>
+  </div>
+</div>
+
+<div class="card">
+  <img src="musiclab.jpg" alt="CODE.ORG - The Hours of Music Lab Certificate" class="certificate-logo" onclick="openImage(this)">
+  <div class="certificate-info">
+    <h3>The Hour of Code</h3>
+    <p>Issued by CODE.ORG | 2025</p>
+  </div>
+</div>
+
 
   </section>
 
@@ -202,4 +218,3 @@
 
 </body>
 </html>
-
