Revise certificates.html with new content
Updated the HTML structure and added new certificates.

--- a/certificates.html
+++ b/certificates.html
@@ -183,7 +183,7 @@
 <div class="card">
   <img src="musiclab.jpg" alt="CODE.ORG - The Hours of Music Lab Certificate" class="certificate-logo" onclick="openImage(this)">
   <div class="certificate-info">
-    <h3>The Hour of Code</h3>
+    <h3>Music Lab: Jam Session</h3>
     <p>Issued by CODE.ORG | 2025</p>
   </div>
 </div>
@@ -218,3 +218,4 @@
 
 </body>
 </html>
+
