--- a/certificates.html
+++ b/certificates.html
@@ -162,6 +162,14 @@
         <p>Issued by HP LIFE | 2025</p>
       </div>
     </div>
+
+    <div class="card">
+      <img src="PNCG.jpg" alt="HP LIFE - Professional Networking for Career Growth Certificate" class="certificate-logo" onclick="openImage(this)">
+      <div class="certificate-info">
+        <h3>Professional Networking for Career Growth</h3>
+        <p>Issued by HP LIFE | 2025</p>
+      </div>
+    </div>
  
 <!-- CODE.ORG Certificates -->
 <div class="card">
@@ -183,7 +191,7 @@
 <div class="card">
   <img src="musiclab.jpg" alt="CODE.ORG - The Hours of Music Lab Certificate" class="certificate-logo" onclick="openImage(this)">
   <div class="certificate-info">
-    <h3>Music Lab: Jam Session</h3>
+    <h3>The Hour of Code</h3>
     <p>Issued by CODE.ORG | 2025</p>
   </div>
 </div>
@@ -218,4 +226,3 @@
 
 </body>
 </html>
-
