--- a/certificates.html
+++ b/certificates.html
@@ -189,9 +189,9 @@
 </div>
 
 <div class="card">
-  <img src="musiclab.jpg" alt="CODE.ORG - The Hours of Music Lab Certificate" class="certificate-logo" onclick="openImage(this)">
+  <img src="musiclab.jpg" alt="CODE.ORG - The Hours of Music Lab: Jam Session Certificate" class="certificate-logo" onclick="openImage(this)">
   <div class="certificate-info">
-    <h3>The Hour of Code</h3>
+    <h3>Musical Lab: Jam Session</h3>
     <p>Issued by CODE.ORG | 2025</p>
   </div>
 </div>
