--- a/certificates.html
+++ b/certificates.html
@@ -75,9 +75,9 @@
 
     <!-- Cisco Networking Academy Certificates -->
     <div class="card">
-      <img src="NABT.jpg" alt="Cisco Networking Academy - Addressing and Troubleshooting Certificate" class="certificate-logo" onclick="openImage(this)">
+      <img src="NABT.jpg" alt="Cisco Networking Academy - Network Addressing and Troubleshooting Certificate" class="certificate-logo" onclick="openImage(this)">
       <div class="certificate-info">
-        <h3>Networking: Addressing and Basic Troubleshooting</h3>
+        <h3>Network Addressing and Basic Troubleshooting</h3>
         <p>Issued by Cisco Networking Academy | 2025</p>
       </div>
     </div>
