Fix HTML encoding issues in education.html

--- a/education.html
+++ b/education.html
@@ -45,7 +45,7 @@
 
     <!-- SENIOR HIGH -->
     <div class="card">
-      <a href="https://www.facebook.com/DepEdTayoSanSINHSSH301426" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.facebook.com/share/1AZjpzAKKY/" target="_blank" rel="noopener noreferrer">
         <img src="sinhs.jpg" alt="San Isidro Senior High School Logo" class="school-logo">
       </a>
       <div class="school-info">
@@ -85,3 +85,4 @@
 
 </body>
 </html>
+
