--- a/certificates.html
+++ b/certificates.html
@@ -154,6 +154,15 @@
       </div>
     </div>
 
+    
+    <div class="card">
+      <img src="OSS.jpg" alt="Cisco Networking Acadaemy - Operating Systems Support" class="certificate-logo" onclick="openImage(this)">
+        <div class="certificate-info">
+        <h3>Operating Systems Support</h3>
+        <p>Issued by Cisco Networking Acadaemy | 2025</p>
+      </div>
+    </div>
+
     <!-- HP LIFE Certificates -->
     <div class="card">
       <img src="AIB.jpg" alt="HP LIFE - AI for Begineers Certificate" class="certificate-logo" onclick="openImage(this)">
