--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,12 @@
     <div class="project-grid">
 
       <div class="project-card">
+        <h3>Group Dynamic Quiz App</h3>
+        <p>A quiz about JavaScript and jQuery.</p>
+        <a href="https://litspoloyaps.github.io/DynamicQuizApp/" target="_blank" class="btn">View Project</a>
+      </div>
+
+      <div class="project-card">
         <h3>Group Countdown Timer</h3>
         <p>A website-based countdown timer.</p>
         <a href="https://litspoloyaps.github.io/Countdown-Timer" target="_blank" class="btn">View Project</a>
@@ -82,3 +88,4 @@
 
 </body>
 </html>
+
